# assistente-comercial-2solve

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: .env.example  README.md  pyproject.toml
backend/src/: approvals.py  config.py  dashboard.py  executors.py  main.py  scheduler.py
backend/src/agents/: advisor_agent.py  base.py  crm_agent.py  email_agent.py  engineering_agent.py  monitor_agent.py  proposal_agent.py  router.py
backend/src/api/: deps.py  routes.py  schemas.py
backend/src/connectors/: engineering.py  ms365.py  omie.py  pptx_2solve.py
backend/src/db/: models.py  session.py
docs/: 00-indicadores-dashboard.md  00-prompts-etapas.md  01-conceito.md  02-arquitetura.md  03-template-prompt-novo-projeto.md  04-replanejamento-v2.md
preview/: README.md  index.html
tests/: conftest.py  fakes.py  test_advisor_agent.py  test_agent_base.py  test_api.py  test_approvals.py  test_crm_agent.py  test_dashboard.py  test_email_agent.py  test_engineering.py  test_engineering_agent.py  test_executors.py  test_monitor_agent.py  test_ms365_connector.py  test_omie_connector.py  test_pptx_2solve.py  test_proposal_agent.py
