[project]
name = "assistente-comercial-2solve"
version = "0.2.0"
description = "Backend do Assistente Comercial 2Solve (FastAPI + agentes Anthropic)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "msal>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
